# HarmonyMatch

./: .pre-commit-config.yaml  README.md  pyproject.toml
config/: credentials.env
connectors/spotify/: spotify_connector.py
tests/unittest/: test_spotify_connector.py
